--- a/src/View/mainMenu.fxml
+++ b/src/View/mainMenu.fxml
@@ -76,7 +76,7 @@
                                     <Insets left="20.0" top="5.0" />
                                  </VBox.margin>
                               </HBox>
-                              <TableView prefHeight="200.0" prefWidth="530.0">
+                              <TableView fx:id="apptTableView" prefHeight="200.0" prefWidth="530.0">
                                 <columns>
                                     <TableColumn fx:id="apptIDCol" prefWidth="30.0" text="ID" />
                                     <TableColumn fx:id="apptTitleCol" prefWidth="61.0" text="Title" />
@@ -134,7 +134,7 @@
                                     <Insets left="20.0" top="5.0" />
                                  </VBox.margin>
                               </HBox>
-                              <TableView prefHeight="200.0" prefWidth="530.0">
+                              <TableView fx:id="customerTableView" prefHeight="200.0" prefWidth="530.0">
                                 <columns>
                                   <TableColumn fx:id="customersIDCol" prefWidth="30.0" text="ID" />
                                   <TableColumn fx:id="customersNameCol" prefWidth="152.0" text="Name" />
@@ -221,6 +221,11 @@
                         <Insets left="5.0" right="5.0" top="72.0" />
                      </VBox.margin>
                   </Pane>
+                  <Button mnemonicParsing="false" onAction="#onActionExit" text="Exit Application">
+                     <VBox.margin>
+                        <Insets left="135.0" top="250.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
          </children>
